@@ -97,6 +97,7 @@ lib/Test/Shared/Fixture/Wikibase/Datatype/Reference/Wikidata/ReferenceURL.pm
 lib/Test/Shared/Fixture/Wikibase/Datatype/Reference/Wikidata/VIAF.pm
 lib/Test/Shared/Fixture/Wikibase/Datatype/Sense/Wikidata/Dog.pm
 lib/Test/Shared/Fixture/Wikibase/Datatype/Snak/Wikidata/GivenName/Douglas.pm
+lib/Test/Shared/Fixture/Wikibase/Datatype/Snak/Wikidata/GivenName/Michal.pm
 lib/Test/Shared/Fixture/Wikibase/Datatype/Snak/Wikidata/GrammaticalGender/Masculine.pm
 lib/Test/Shared/Fixture/Wikibase/Datatype/Snak/Wikidata/Image/Dog.pm
 lib/Test/Shared/Fixture/Wikibase/Datatype/Snak/Wikidata/InstanceOf/Human.pm
@@ -109,6 +110,7 @@ lib/Test/Shared/Fixture/Wikibase/Datatype/Snak/Wikidata/Retrieved/Fixture1.pm
 lib/Test/Shared/Fixture/Wikibase/Datatype/Snak/Wikidata/SexOrGender/Male.pm
 lib/Test/Shared/Fixture/Wikibase/Datatype/Snak/Wikidata/StatedIn/VIAF.pm
 lib/Test/Shared/Fixture/Wikibase/Datatype/Statement/Wikidata/GivenName/Douglas.pm
+lib/Test/Shared/Fixture/Wikibase/Datatype/Statement/Wikidata/GivenName/Michal.pm
 lib/Test/Shared/Fixture/Wikibase/Datatype/Statement/Wikidata/GrammaticalGender/Masculine.pm
 lib/Test/Shared/Fixture/Wikibase/Datatype/Statement/Wikidata/Image/Dog.pm
 lib/Test/Shared/Fixture/Wikibase/Datatype/Statement/Wikidata/InstanceOf/CommonLivingOrganism.pm
@@ -123,6 +125,7 @@ lib/Test/Shared/Fixture/Wikibase/Datatype/Value/Item/Wikidata/DouglasAdams.pm
 lib/Test/Shared/Fixture/Wikibase/Datatype/Value/Item/Wikidata/Human.pm
 lib/Test/Shared/Fixture/Wikibase/Datatype/Value/Item/Wikidata/Male.pm
 lib/Test/Shared/Fixture/Wikibase/Datatype/Value/Item/Wikidata/Masculine.pm
+lib/Test/Shared/Fixture/Wikibase/Datatype/Value/Item/Wikidata/Michal.pm
 lib/Test/Shared/Fixture/Wikibase/Datatype/Value/Item/Wikidata/Poem.pm
 lib/Test/Shared/Fixture/Wikibase/Datatype/Value/Item/Wikidata/VersionEditionOrTranslation.pm
 lib/Test/Shared/Fixture/Wikibase/Datatype/Value/Item/Wikidata/VIAF.pm
@@ -193,6 +196,8 @@ t/Test-Shared-Fixture-Wikibase-Datatype-Sense-Wikidata-Dog/03-new.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-GivenName-Douglas/01-use.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-GivenName-Douglas/02-version.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-GivenName-Douglas/03-new.t
+t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-GivenName-Michal/01-use.t
+t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-GivenName-Michal/02-version.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-GrammaticalGender-Masculine/01-use.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-GrammaticalGender-Masculine/02-version.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-GrammaticalGender-Masculine/03-new.t
@@ -229,6 +234,8 @@ t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-StatedIn-VIAF/03-new.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Statement-Wikidata-GivenName-Douglas/01-use.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Statement-Wikidata-GivenName-Douglas/02-version.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Statement-Wikidata-GivenName-Douglas/03-new.t
+t/Test-Shared-Fixture-Wikibase-Datatype-Statement-Wikidata-GivenName-Michal/01-use.t
+t/Test-Shared-Fixture-Wikibase-Datatype-Statement-Wikidata-GivenName-Michal/02-version.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Statement-Wikidata-GrammaticalGender-Masculine/01-use.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Statement-Wikidata-GrammaticalGender-Masculine/02-version.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Statement-Wikidata-GrammaticalGender-Masculine/03-new.t
@@ -271,6 +278,8 @@ t/Test-Shared-Fixture-Wikibase-Datatype-Value-Item-Wikidata-Male/03-new.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Value-Item-Wikidata-Masculine/01-use.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Value-Item-Wikidata-Masculine/02-version.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Value-Item-Wikidata-Masculine/03-new.t
+t/Test-Shared-Fixture-Wikibase-Datatype-Value-Item-Wikidata-Michal/01-use.t
+t/Test-Shared-Fixture-Wikibase-Datatype-Value-Item-Wikidata-Michal/02-version.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Value-Item-Wikidata-Poem/01-use.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Value-Item-Wikidata-Poem/02-version.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Value-Item-Wikidata-Poem/03-new.t
@@ -484,6 +493,8 @@ xt/Test-Shared-Fixture-Wikibase-Datatype-Sense-Wikidata-Dog/01-pod_coverage.t
 xt/Test-Shared-Fixture-Wikibase-Datatype-Sense-Wikidata-Dog/02-pod.t
 xt/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-GivenName-Douglas/01-pod_coverage.t
 xt/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-GivenName-Douglas/02-pod.t
+xt/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-GivenName-Michal/01-pod_coverage.t
+xt/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-GivenName-Michal/02-pod.t
 xt/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-GrammaticalGender-Masculine/01-pod_coverage.t
 xt/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-GrammaticalGender-Masculine/02-pod.t
 xt/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-Image-Dog/01-pod_coverage.t
@@ -508,6 +519,8 @@ xt/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-StatedIn-VIAF/01-pod_cove
 xt/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-StatedIn-VIAF/02-pod.t
 xt/Test-Shared-Fixture-Wikibase-Datatype-Statement-Wikidata-GivenName-Douglas/01-pod_coverage.t
 xt/Test-Shared-Fixture-Wikibase-Datatype-Statement-Wikidata-GivenName-Douglas/02-pod.t
+xt/Test-Shared-Fixture-Wikibase-Datatype-Statement-Wikidata-GivenName-Michal/01-pod_coverage.t
+xt/Test-Shared-Fixture-Wikibase-Datatype-Statement-Wikidata-GivenName-Michal/02-pod.t
 xt/Test-Shared-Fixture-Wikibase-Datatype-Statement-Wikidata-GrammaticalGender-Masculine/01-pod_coverage.t
 xt/Test-Shared-Fixture-Wikibase-Datatype-Statement-Wikidata-GrammaticalGender-Masculine/02-pod.t
 xt/Test-Shared-Fixture-Wikibase-Datatype-Statement-Wikidata-Image-Dog/01-pod_coverage.t
@@ -536,6 +549,8 @@ xt/Test-Shared-Fixture-Wikibase-Datatype-Value-Item-Wikidata-Male/01-pod_coverag
 xt/Test-Shared-Fixture-Wikibase-Datatype-Value-Item-Wikidata-Male/02-pod.t
 xt/Test-Shared-Fixture-Wikibase-Datatype-Value-Item-Wikidata-Masculine/01-pod_coverage.t
 xt/Test-Shared-Fixture-Wikibase-Datatype-Value-Item-Wikidata-Masculine/02-pod.t
+xt/Test-Shared-Fixture-Wikibase-Datatype-Value-Item-Wikidata-Michal/01-pod_coverage.t
+xt/Test-Shared-Fixture-Wikibase-Datatype-Value-Item-Wikidata-Michal/02-pod.t
 xt/Test-Shared-Fixture-Wikibase-Datatype-Value-Item-Wikidata-Poem/01-pod_coverage.t
 xt/Test-Shared-Fixture-Wikibase-Datatype-Value-Item-Wikidata-Poem/02-pod.t
 xt/Test-Shared-Fixture-Wikibase-Datatype-Value-Item-Wikidata-VersionEditionOrTranslation/01-pod_coverage.t
