@@ -1,4 +1,5 @@
 0.32
+ - Add fixtures for statement of given name with Michal value.
  - Improve doc comments.
  - Improve Wikibase::Datatype::Utils SEE ALSO section in doc.
  - Update Module::Install to 1.21.
